--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,6 +27,7 @@
   body {
     width: 100%;
     height: 100%;
+    overflow-y: auto !important;
   }
 
   body {
@@ -135,7 +136,7 @@
 
   .list__tile,
   .list__group__header {
-    border-right: 4px solid transparent;
+    border-right: 3px solid transparent;
     &:hover {
       border-right-color: rgb(255, 202, 0);
     }
