--- a/resources/assets/js/pages/Organization/Departments/styles.scss
+++ b/resources/assets/js/pages/Organization/Departments/styles.scss
@@ -5,10 +5,10 @@
   margin: 10px auto;
 }
 
-.mb-2.btn {
-  position: absolute;
-  bottom: 0;
-  z-index: 2;
+.v-dialog__container {
+  position: absolute !important;
+  bottom: 0 !important;
+  z-index: 2 !important;
 }
 
 span {
