--- a/resources/assets/js/pages/Tours/list/styles.scss
+++ b/resources/assets/js/pages/Tours/list/styles.scss
@@ -46,6 +46,10 @@ li {
   animation: buttonLeave .3s cubic-bezier(.52, -0.44, .88, -0.45);
 }
 
+td > span {
+  cursor: pointer;
+}
+
 @keyframes routerEnter {
   0% {
     opacity: 0;
