--- a/resources/assets/js/pages/Organization/Employees/editor/styles.scss
+++ b/resources/assets/js/pages/Organization/Employees/editor/styles.scss
@@ -1,4 +1,4 @@
-.card__title {
+.v-card__title {
   justify-content: center;
 }
 
@@ -65,4 +65,9 @@ hr {
     padding: 15px;
     text-align: center;
   }
+}
+
+.form-btns {
+  display: flex;
+  justify-content: center;
 }
